# patchyAnalysisTools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/: cpp.yml  pip.yml
.github/workflows/: cpp.yml  pip.yml
cmake/: patchyAnalysisToolsConfig.cmake.in
examples/: .trajectory_io.py.swp  biggest_cluster.xyz  biggest_cluster_clust.xyz  cluster_tests.py  example.ipynb  first_cluster_loops.xyz  frames_0_10.xyz  last_frame.tcl  last_frame_clust.conf  last_frame_clusters.xyz  last_frame_clusters_clust.xyz  longest_chains.xyz  test_tiling.py  tiled_3_by_3.xyz  trajectory_io.py
examples/g_ab_test/: .test_gr.py.swp  final.conf  test_gr.py
include/: clusters.hpp  frame.hpp  grid.hpp  patches.hpp  rotation.hpp  trajectory.hpp
patchyAnalysisTools/: __init__.py  autocorrelation.py  clusters.py  patches.py  rdf_sq.py  trajectory.py  utils.py
patchyAnalysisTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
patchyAnalysisTools/trajectory/: trajectory.py
src/: RDF.cpp  clusters.cpp  frame.cpp  grid.cpp  patches.cpp  patchyAnalysisTools.cpp  rotation.cpp  sq.cpp  trajectory.cpp  vec3.cpp
src/include/: clusters.hpp  frame.hpp  patches.hpp  rotation.hpp  trajectory.hpp  vec3.hpp
src/patchyAnalysisTools/: __init__.py  __main__.py.in  clusters.py  frame.py  patches.py  patchyAnalysisTools_py.cpp  trajectory.py
tests/: test_frame.py  test_patches.py  test_trajectory.py
tests/cpp/: CMakeLists.txt  test2.cpp  test_clusters.cpp  test_frame.cpp  test_grid.cpp  test_patches.cpp  test_rotation.cpp  test_trajectory.cpp  test_vec3.cpp
